--- a/css/main_dark.css
+++ b/css/main_dark.css
@@ -1,6 +1,6 @@
 /* Dark theme */
 
-html {
+body {
   filter: invert(90%);
 }
 
